--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -75,7 +75,7 @@
         android:layout_marginEnd="8dp"
         android:id="@+id/textInputLayout13"
         android:layout_marginTop="43dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup">
+        app:layout_constraintTop_toBottomOf="@+id/genderRadio">
 
         <EditText
             android:id="@+id/emailRegister"
@@ -120,7 +120,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/radioGroup"
+        android:id="@+id/genderRadio"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp">
         <TextView
