--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#ff4081</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="black">#353535</color>
 
 
     <color name="primary">#2196F3</color>
